name:                listeo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/listeo#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable start
  hs-source-dirs:      app
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scotty
                     , aeson
                     , mongoDB
                     , text
                     , wai-cors
                     , bytestring
                     , http-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/listeo
